--- a/Front-end/src/app/home/home.component.html
+++ b/Front-end/src/app/home/home.component.html
@@ -26,7 +26,7 @@
   </div>
 </div>
 <div class="welcome">
-    Welcome to <span>MoroccanOfTheWorld</span>, here you can exchange with moroccans across the world, share your excperiences,
+    Welcome to MoroccanOfTheWorld, here you can exchange with moroccans across the world, share your excperiences,
     find new opportunities, and more ...
 
 </div>
