--- a/Front-end/src/app/newsfeed/newsfeed.component.html
+++ b/Front-end/src/app/newsfeed/newsfeed.component.html
@@ -18,40 +18,40 @@
                 <div class="event-img"> <a class="media-left"> <img alt="" src="../../assets/post_img1.jpg"> </a>
                 </div>
                 <div class="event-desc"> 
-                    <div class="event_title">Conference title</div>
-                    <p>Date : 26/08/2020</p>
-                    <p>Provider : john doe</p>
+                    <div class="event_title">Automation Science and Engineering</div>
+                    <p>Date : 11th October 2020</p>
+                    <p>Location : Boston, USA </p>
                 </div>
             </div>
             <div class="event_container">
                 <div class="event-img"> <a class="media-left"> <img alt="" src="../../assets/post_img1.jpg"> </a>
                 </div>
                 <div class="event-desc"> 
-                    <div class="event_title">Conference title</div>
-                    <p>Date : 26/08/2020</p>
-                    <p>Provider : john doe</p>
+                    <div class="event_title">Advance Accounting and Finance</div>
+                    <p>Date : 11th October 2020</p>
+                    <p>Location : New York, USA </p>
                 </div>
             </div>
             <div class="event_container">
                 <div class="event-img"> <a class="media-left"> <img alt="" src="../../assets/post_img1.jpg"> </a>
                 </div>
                 <div class="event-desc"> 
-                    <div class="event_title">Conference title</div>
-                    Date : 26/08/2020 <br>
-                    Provider : john doe
+                    <div class="event_title">Nutrition & Health</div>
+                    <p>Date : 15th October 2020</p>
+                    <p>Location : Tokyo, Japan  </p>
                 </div>
             </div>
             <div class="event_container">
                 <div class="event-img"> <a class="media-left"> <img alt="" src="../../assets/post_img1.jpg"> </a>
                 </div>
                 <div class="event-desc"> 
-                    <div class="event_title">Conference title</div>
-                    <p>Date : 26/08/2020</p>
-                    <p>Provider : john doe</p>
+                    <div class="event_title">Mathematic, Statistics and Applied Science</div>
+                    <p>Date : 16th October 2020</p>
+                    <p>Provider : London , UK</p>
                 </div>
             </div>
         </div>
-        <div class="title"><span>COURSES</span></div>
+        <div class="title"><span><a routerLink="/courses" style="color: white;"> COURSES </a></span></div>
         <div class="sort">
             <label class="sort-label" for="sort">Sort by:</label>
             <select class="sort-select" name="" id="sort">
