--- a/Front-end/src/app/trainings/trainings.component.html
+++ b/Front-end/src/app/trainings/trainings.component.html
@@ -7,7 +7,7 @@
     <div class="topics">
         <div class="topic">
             <span>Business Topics</span>
-            <div class="img"></div>
+            <div class="img img1"></div>
             <div class="desc">
                 Business skills training is becoming a necessity in maximizing employee performance, regardless of job level or function. From leadership development to soft skills training, our business courses can help your team stay ahead.
             </div>
@@ -15,14 +15,14 @@
         </div>
         <div class="topic">
             <span>Technology Topics</span>
-            <div class="img"></div>
+            <div class="img img2"></div>
             <div class="desc">
                 As technology continues to evolve, the skills gap for workplace technology experts widens. Our technology courses can provide your technical teams with the training they need to gain new skills or become more advanced in their existing skillsets.         
             </div>  
         </div>
         <div class="topic">
             <span>Creative Topics</span>
-            <div class="img"></div>
+            <div class="img img3"></div>
             <div class="desc">
                 These days, design and technology go hand in hand. Being adept with design and engineering technology has become just as important as creative soft skills. Our creative courses can help you learn AutoCAD, Photoshop, and many other software tools to improve creative skills.
             </div>   
@@ -32,7 +32,7 @@
 </div>
 
 <div class="courses_wrapper">
-    <span>Explore our courses</span>
+    <span>Explore courses</span>
     <div class="options">
         <div class="name_filter">
             <input (input)="onSearchChange($event.target.value)" type="search" placeholder="Search ..."><i class="fas fa-search"></i>
