--- a/Front-end/src/app/home/home.component.css
+++ b/Front-end/src/app/home/home.component.css
@@ -79,7 +79,7 @@ ul li:hover {
 
 
 .img{
-    background-image: url('../../assets/pexels-pixabay-220182.jpg');
+    background-image: url('../../assets/pexels-fwstudio-131634.jpg');
     background-position: center;
     background-size: cover;
     height: 600px;
@@ -134,9 +134,10 @@ ul li:hover {
     left: 50%; 
     text-align: center;   
     transform: translate(-50%, -20%);
-    font-size: 2.5em; 
-    line-height: 0.9;
-    color: rgb(243, 240, 240);
+    font-size: 2.7em; 
+    line-height: 1.4;
+    color: rgb(134, 0, 0);
+    font-weight: bold;
     
 }
 .welcome span{
