--- a/Front-end/src/app/trainings/trainings.component.css
+++ b/Front-end/src/app/trainings/trainings.component.css
@@ -7,7 +7,8 @@
     position: absolute; 
     top: 26%; 
     left: 40%; 
-    text-align: start;   
+    text-align: start; 
+    line-height: 1.1;  
     transform: translate(-90%, -20%);
     font-size: 2.5em; 
     color: rgb(243, 240, 240);
@@ -42,7 +43,21 @@
 .topic>.img{
     width: 100%;
     height: 200px;
-    background-color: royalblue;
+}
+.img1{
+    background-image: url('../../assets/course1.png');
+    background-position: center;
+    background-size: cover;
+}
+.img2{
+    background-image: url('../../assets/course2.png');
+    background-position: center;
+    background-size: cover;
+}
+.img3{
+    background-image: url('../../assets/course3.png');
+    background-position: center;
+    background-size: cover;
 }
 .topic>.desc{
     padding: 20px 0;
