update home page

--- a/Front-end/src/app/footer/footer.component.html
+++ b/Front-end/src/app/footer/footer.component.html
@@ -1,29 +1,27 @@
 <div class="footer" >
     <div class="footer-1">
-        <div class="user">
-            <div class="type"><span class="fas fa-angle-right"></span> Candidat</div>
-            <div class="infos">
-                <div>Look for opportunities</div>
-                <div>Make contact</div>
-                <div>Discover job market</div>
-            </div>
-            
-        </div>
-        <div class="user">
-            <div class="type"><span class="fas fa-angle-right"></span> Provider</div>
-            <div class="infos">
-                <div>Share your experience</div>
-                <div>Find new ideas</div>
-                <div>Look for profils</div>
-            </div> 
-        </div>
+        <div>Confidence and responsibility</div>
+        <div>Rain Drop</div>
+        <div>Case study</div>
+        <div>Live plans</div>
     </div>
     <div class="footer-2">
-        <div class="contactus">
-            Contact Us
-        </div>
-        <span class="contact"><i class="fas fa-map-marker-alt"></i>Rabat, MAR</span>
-        <span class="contact"><i class="fas fa-phone-alt"></i>+212 612121212</span>
-        <span class="contact"><i class="far fa-envelope"></i>contact@gmail.com</span>
+       <div>Training</div>
+       <div>Collaboration</div>
+       <div>Support</div>
+    </div>
+    <div class="footer-3">
+        <div>Job offers</div>
+        <div>Resources</div>
+        <div>Look for a partner</div>
+        <div>Become a partner</div>
+    </div>
+    <div class="footer-4">
+        <div>Exchanges</div>
+        <div>Events</div>
+        <div>Blogs</div>
+        <div>Podcasts</div>
+        <div>Community</div>
+        <div>Press center</div>
     </div>
   </div>
