--- a/Front-end/src/app/footer/footer.component.css
+++ b/Front-end/src/app/footer/footer.component.css
@@ -3,15 +3,20 @@
     height: 200px;
     border-top: 3px solid black;
     display: flex;
-}
-
-.footer-1{
-    width: 70%;
-    display: flex;
     justify-content: space-around;
-    align-items: center;
+    padding-top: 30px;
 }
 
+.footer>div>div{
+    color: rgb(95, 95, 95);
+    cursor: pointer;
+}
+
+.footer>div>div:hover{
+    color: black;
+}
+
+/*
 .user{
     display: flex;
     flex-direction: column;
@@ -51,3 +56,4 @@
     margin-right: 10px;
 }
 
+*/
