--- a/Front-end/src/app/home/home.component.html
+++ b/Front-end/src/app/home/home.component.html
@@ -1,35 +1,38 @@
-<div class="img">
+<div class="header_wrapper">
+    <div class="home_header">
+        <div class="header_one">
+            <div><span>MOROCCANOFTHEWORLD.COM</span></div> 
+            <div class="search"><input type="search"><i class="fas fa-search"></i></div>
+        </div>
+        <div class="header_two">
+            <div><span (click)="changeOption(0)" [ngClass]="{'clicked':option === 0}">Home</span></div>
+            <div><span (click)="changeOption(1)" [ngClass]="{'clicked':option === 1}">ATLAS SYNERGY</span></div>
+            <div><span (click)="changeOption(2)" [ngClass]="{'clicked':option === 2}">MEDIA INSIGHT</span></div>
+            <div><span>PATRIMOINE</span></div>
+            <div><span>DONATION PROJECTS</span></div>
+            <div><span>ASSOCIATIONS</span></div>
+            <div><span>ART AND CULTURE</span></div>            
+        </div>
+    </div>
+</div>
+<div class="img" *ngIf="option == 0">
     <div class="description"></div>
     <div class="img_content"></div>
-</div>
-<div class="background">
+    <div class="welcome">
+        Welcome to MoroccanOfTheWorld, here you can exchange with moroccans across the world, share your experiences,
+        find new opportunities, and more ...
     
-</div>
-<div class="background-2">
-  <div class="about-us">
-      Our history
     </div>
-    <div class="about-us">
-      Our Heritage
-  </div>
-  <div class="about-us">
-      Our Know-how
-  </div>
-  <div class="about-us">
-      Donation projects
-  </div>
-  <div class="about-us">
-      Associations
-  </div>
-  <div class="about-us">
-      Art and Culture
-  </div>
 </div>
-<div class="welcome">
-    Welcome to MoroccanOfTheWorld, here you can exchange with moroccans across the world, share your excperiences,
-    find new opportunities, and more ...
+
+<div class="atlas" *ngIf="option == 1">
 
 </div>
+
+<div class="media" *ngIf="option == 2">
+
+</div>
+
 <div class="content_wrapper">
     <div class="content_title">
         What do we offer ?
@@ -70,7 +73,7 @@
                     <ul>
                         <li><i class="fas fa-caret-right"></i>Deposit my CV</li>
                         <li><i class="fas fa-caret-right"></i>Offer conferences</li>
-                        <li><i class="fas fa-caret-right"></i>Mooks cours</li>
+                        <li><i class="fas fa-caret-right"></i>Offer mooks cours</li>
                         <li><i class="fas fa-caret-right"></i>Look for peers</li>
                     </ul>
                 </div>
@@ -78,6 +81,16 @@
         </div>
       
       </div>
+      <div class="logo_back l1"></div>
+      <div class="logo_back l2"></div>
+      <div class="logo_back l3"></div>
+      <div class="logo_back l4"></div>
+      <div class="logo_back l5"></div>
+      <div class="logo_back l6"></div>
+      <div class="logo_back l7"></div>
+      <div class="logo_back l8"></div>
+      <div class="logo_back l9"></div>
+      <div class="logo_back l10"></div>
 </div>
 
 
