--- a/Front-end/src/app/home-page/home-page.component.html
+++ b/Front-end/src/app/home-page/home-page.component.html
@@ -28,18 +28,65 @@
             </div>
         </div>
     </div>
-    <div class="business_hub">
-        <div class="title">Business Hub</div>
-        <div class="hub_content1">
-            <div>Investrain</div>
-            <div>Boost startup</div>
-            <div>Find supplyer</div>
-            <div>Business Maps</div>
-            <div>Business ware</div>
-            <div>Business peers</div>
-            <div>Verisign cv-tech</div>
-            <div>Market place</div>
-            <div>Collaboration area</div>
+</div>
+<div class="description_wrapper">
+    <div class="description_container">
+        <div class="desc2">
+            <i class="fas fa-tasks"></i>
+            <span>Evolutif application</span>
+            <div>Secured and constantly optimized, our social network is build to meet all our users needs</div>
+        </div>
+        <div class="desc2">
+            <i class="fas fa-user-tie"></i>
+            <span>Performent solution for busnisses and individuals</span>
+            <div>Explore our services to help grow your business</div>
+        </div>
+    </div>
+</div>
+<div class="hub_wrapper">
+    <div class="hub_container">
+        <div class="title"><hr>Business Hub<hr></div>
+        <div class="hub">
+            <div class="description">Different services to help you develop your line of business securely</div>
+            <div class="hub_content">
+                <div><i class="fas fa-wallet"></i> Investrain</div>
+                <div><i class="fas fa-tasks"></i> Boost startup</div>
+                <div><i class="fas fa-truck"></i> Find supplyer</div>
+                <div><i class="fas fa-map-marked-alt"></i> Business Maps</div>
+                <div><i class="fas fa-warehouse"></i> Business ware</div>
+                <div><i class="fas fa-user-friends"></i> Business peers</div>
+                <div><i class="fas fa-briefcase"></i> Find job</div>
+                <div><i class="fas fa-search-dollar"></i> Market place</div>
+                <div><i class="fas fa-coffee"></i> Collaboration area</div>
+            </div>
+            <div class="more">View more services</div>
+        </div>
+    </div>
+    <div class="hub_container">
+        <div class="title"><hr>Skills Hub<hr></div>
+        <div class="hub">
+            <div class="description">All the resources you will need to develop yourself and evoluate</div>
+            <div class="hub_content">
+                <div><i class="fas fa-tint"></i> Rain Drop</div>
+                <div><i class="far fa-file"></i> Verisign cv-tech</div>
+                <div><i class="fas fa-book"></i> Library</div>
+                <div><i class="fab fa-slideshare"></i> Live plans</div>
+                <div><i class="far fa-question-circle"></i> Support</div>
+                <div><i class="fas fa-chalkboard-teacher"></i> Mooks tutorials</div>
+                <div><i class="fas fa-microphone"></i> Conferences</div>
+            </div>
+            <div class="more">View more resources</div>
+        </div>
+    </div>
+    <div class="hub_container">
+        <div class="title"><hr>Dare to innovate<hr></div>
+        <div class="hub">
+            <div class="description">Get out from your comfort zone and dare to innovate</div>
+            <div class="hub_content">
+                <div>Modernization</div>
+                <div>Optimization</div>
+                <div>Technologies</div>
+            </div>
         </div>
     </div>
 </div>
