--- a/Front-end/src/app/header/header.component.css
+++ b/Front-end/src/app/header/header.component.css
@@ -1,3 +1,92 @@
+.navbar{
+    display: flex;
+    width: 100%;
+    height: 70px;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 3px solid black;
+    color: rgb(95, 95, 95);
+}
+
+.logo{
+    display: flex;
+    justify-content: space-between;
+    width: 330px;
+    height: 60px;
+}
+
+.image{
+    display: flex;
+    align-items: center;
+    background-image: url('../../assets/logo2.png');
+    background-position: center;
+    background-size: cover;
+    width: 140px;
+    height: 50px;
+    margin-right: 10px;
+    
+}
+
+.desc{
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+    font-size: 1.3em;
+
+}
+
+.links{
+    display: flex;
+    width: 35%;
+    justify-content: space-between;
+    font-size: 1.2em;
+}
+
+.links div{
+    cursor: pointer;
+}
+
+.links div:hover {
+    color: black;
+}
+
+.links div a{
+    color: rgb(95, 95, 95);
+}
+
+.links div a:hover{
+    color: black;
+}
+
+.signin{
+    display: flex;
+    width: 150px;
+    justify-content: space-between;
+    font-size: 1.2em;
+}
+
+.signin a{
+    color: rgb(95, 95, 95);
+}
+
+.in{
+    display: flex;
+    width: 200px;
+    justify-content: space-between;
+}
+
+.in>.one{
+    align-self: center;
+    display: flex;
+    width: 40%;
+    justify-content: space-between;
+}
+.in>.two{
+    align-self: center;
+    width: 35%;
+}
+
+/*
 .nav-bar{
     width: 100%;
     height: 80px;
@@ -19,10 +108,11 @@
     height: 100%;
     width: 30%;
 }
+*/
 .btn{
     position: absolute;
     top: 15px;
-    left: 280px;
+    left: 380px;
 
     height: 45px;
     width: 45px;
@@ -44,7 +134,7 @@
 .btn.click span:before{
     content: '\f00d';
 }
-
+/*
 .sign-in{
     display: flex;
     width: 80%;
@@ -77,12 +167,15 @@
     align-items: center;
 }
 
+*/
 .logout{
     background-color: black;
     border-radius: 10px;
     color: white;
     font-weight: bold;
     padding: 5px 10px;
+    border-style: none;
+    outline: none;
 }
 .logout:hover{
     background-color: rgb(85, 85, 85);
@@ -94,13 +187,13 @@
     align-items: center;
 }
 
-.image{
+.img{
     border-radius: 50%;
     width: 30px;
     height: 30px;
     
 }
-.image>img{
+.img>img{
     position: relative;
     width: 100%;
     height: 100%;
