--- a/Front-end/src/app/home-page/home-page.component.html
+++ b/Front-end/src/app/home-page/home-page.component.html
@@ -1,25 +1,9 @@
-<div class="navbar">
-    <div class="logo">
-        <div class="image"></div>
-        <div class="desc">Atlassian - Rain Drop</div>
-    </div>
-    <div class="links">
-        <div>Business</div>
-        <div>Trainings</div>
-        <div>Innovation</div>
-        <div>Press center</div>
-        <div>First step</div>
-    </div>
-    <div class="signin">
-        <div>SIGN UP</div>
-        <div>SIGN IN</div>
-    </div>
-</div>
+
 <div class="content_wrapper">
     <div class="content_container">
         <div class="content_welcome">
             <div class="content_description">
-                <div class="description">Tomorow is another day to make an impact, It's up to us to change it with confidence and responsibility</div>
+                <div class="description">Tomorrow is another day to make an impact, It's up to us to change it with confidence and responsibility</div>
             </div>
             <div class="content_details">
                 <div><i class="fas fa-check"></i> Utilize ressources to develop yourself and evoluate</div>
@@ -49,15 +33,15 @@
         <div class="hub">
             <div class="description">Different services to help you develop your line of business securely</div>
             <div class="hub_content">
-                <div><i class="fas fa-wallet"></i> Investrain</div>
+                <div><i class="fas fa-wallet"></i> Investment Rain</div>
                 <div><i class="fas fa-tasks"></i> Boost startup</div>
-                <div><i class="fas fa-truck"></i> Find supplyer</div>
-                <div><i class="fas fa-map-marked-alt"></i> Business Maps</div>
+                <div><i class="fas fa-truck"></i> Suppliers River</div>
+                <div><i class="fas fa-map-marked-alt"></i>Business Maps</div>
                 <div><i class="fas fa-warehouse"></i> Business ware</div>
                 <div><i class="fas fa-user-friends"></i> Business peers</div>
                 <div><i class="fas fa-briefcase"></i> Find job</div>
                 <div><i class="fas fa-search-dollar"></i> Market place</div>
-                <div><i class="fas fa-coffee"></i> Collaboration area</div>
+                <div><i class="fas fa-coffee"></i> Collaboration Lake</div>
             </div>
             <div class="more">View more services</div>
         </div>
@@ -68,12 +52,12 @@
             <div class="description">All the resources you will need to develop yourself and evoluate</div>
             <div class="hub_content">
                 <div><i class="fas fa-tint"></i> Rain Drop</div>
-                <div><i class="far fa-file"></i> Verisign cv-tech</div>
-                <div><i class="fas fa-book"></i> Library</div>
+                <div><i class="far fa-file"></i> Verisign cv-tech Cloud</div>
+                <div><i class="fas fa-book"></i> Library Fountain</div>
                 <div><i class="fab fa-slideshare"></i> Live plans</div>
                 <div><i class="far fa-question-circle"></i> Support</div>
-                <div><i class="fas fa-chalkboard-teacher"></i> Mooks tutorials</div>
-                <div><i class="fas fa-microphone"></i> Conferences</div>
+                <div><i class="fas fa-chalkboard-teacher"></i>Formation River</div>
+                <div><i class="fas fa-microphone"></i> Conferences Brook</div>
             </div>
             <div class="more">View more resources</div>
         </div>
@@ -90,3 +74,4 @@
         </div>
     </div>
 </div>
+
