--- a/Front-end/src/app/profile/profile.component.html
+++ b/Front-end/src/app/profile/profile.component.html
@@ -45,6 +45,9 @@
                   {{aboutMe}}
               </div>
           </div>
+          <div class="resume_container">
+            <app-resume [userId]="id"></app-resume>
+          </div>
           <div class="post_container">
             <app-view-posts [posts]="posts"></app-view-posts>
           </div>
