--- a/Front-end/src/app/notifications/notifications.component.css
+++ b/Front-end/src/app/notifications/notifications.component.css
@@ -17,9 +17,9 @@
     position: absolute;
     background-color: rgb(241, 241, 241);
     width: 300px;
-    max-height: 300px;
+    height: 300px;
     top: 60px;
-    right: 370px;
+    right: 240px;
     border-radius: 5px;
     border: 3px solid rgb(121, 120, 120);
     display: flex;
