adding resume to profil

--- a/Front-end/src/app/profile/profile.component.html
+++ b/Front-end/src/app/profile/profile.component.html
@@ -46,7 +46,7 @@
               </div>
           </div>
           <div class="resume_container">
-            <app-resume [userId]="id"></app-resume>
+            <app-resume [id]="id"></app-resume>
           </div>
           <div class="post_container">
             <app-view-posts [posts]="posts"></app-view-posts>
