--- a/Front-end/src/app/auth/user-profile/user-profile.component.css
+++ b/Front-end/src/app/auth/user-profile/user-profile.component.css
@@ -44,11 +44,10 @@
     margin-right: 10px;
 }
 
-.about-me{
+.about-me,.resume_container{
     display: flex;
     flex-direction: column;
     padding: 10px;
-    border-bottom: 1px solid black;
 }
 .header{
     font-size: large;
