--- a/Front-end/src/app/auth/user-profile/user-profile.component.html
+++ b/Front-end/src/app/auth/user-profile/user-profile.component.html
@@ -68,9 +68,10 @@
                     </div>
                    
                 </div>
-                <div class="resume_container">
-                    <app-resume [userId]="id"></app-resume>
-                  </div>
+                <div *ngIf="isLoaded" class="resume_container">
+                    <app-resume [id]="id"></app-resume>
+                </div>
+                <hr style="background-color: black;">
                 <div class="post_container">
                     <app-create-post></app-create-post>
                     <app-view-posts [posts]="posts"></app-view-posts>
