--- a/Front-end/src/app/jobs/job-description/job-description.component.html
+++ b/Front-end/src/app/jobs/job-description/job-description.component.html
@@ -1,1 +1,6 @@
-<p>job-description works!</p>
+<div class="job_container" (click)="viewJobDetails()">
+    <div class="title">Stage développement JAVA/JEE</div>
+    <div class="enterprise">Thales</div>
+    <div class="location">Nante, FR</div>
+    <div class="time">2 days ago</div>
+</div>
