--- a/Front-end/src/app/jobs/create-job-offer/create-job-offer.component.css
+++ b/Front-end/src/app/jobs/create-job-offer/create-job-offer.component.css
@@ -20,7 +20,7 @@ h1 {
     padding: 10px;
 }
 
-.form_element{
+.form_element,.date{
     padding: 10px 0;
     color: navy;
 }
@@ -39,7 +39,7 @@ h1 {
     padding: 5px;
 }
 
-button {
+.form_button {
     margin-top: 50px;
     width: 150px;
     height: 30px;
@@ -48,4 +48,12 @@ button {
     border: none;
     outline: none;
     border-radius: 5px;
+}
+
+.date input{
+    height: 30px;
+    border-radius: 3px;
+    border: 1px solid rgb(197, 197, 197);
+    outline: none;
+    padding: 5px;
 }
