provider job offers

--- a/Front-end/src/app/header/header.component.html
+++ b/Front-end/src/app/header/header.component.html
@@ -37,6 +37,7 @@
         <div class="link" (click)="toggleClass()"><a routerLink='/profile'>Profil</a></div>
         <div class="link" (click)="toggleClass()"><a routerLink='/groups'>Groups</a></div>
         <div class="link" (click)="toggleClass()"><a routerLink='/users'>People</a></div>
+        <div class="link" (click)="toggleClass()"><a routerLink="/jobs">Jobs</a></div>
         <div class="link" (click)="toggleClass()"><a routerLink="/courses">Trainings</a></div>
 </div>
 </div>
