--- a/Front-end/src/app/jobs/view-jobs/view-jobs.component.css
+++ b/Front-end/src/app/jobs/view-jobs/view-jobs.component.css
@@ -58,6 +58,7 @@ i{
     color: royalblue;
     border: 2px solid royalblue;
     border-radius: 15px;
+    margin-left: 20px;
 }
 
 .content_wrapper{
