news feed update

--- a/Front-end/src/app/newsfeed/newsfeed.component.html
+++ b/Front-end/src/app/newsfeed/newsfeed.component.html
@@ -51,7 +51,9 @@
                 </div>
             </div>
         </div>
-        <div class="title"><span><a routerLink="/courses" style="color: white;"> COURSES </a></span></div>
+        <div class="title"><span><a routerLink="/courses" style="color: white; text-decoration: none;"> Trainnings </a></span></div>
+        <app-prev-trainnings></app-prev-trainnings>
+        <!--
         <div class="sort">
             <label class="sort-label" for="sort">Sort by:</label>
             <select class="sort-select" name="" id="sort">
@@ -97,6 +99,7 @@
                 </div>
             </div>
         </div>
+        -->
         <div class="title"><span>JOB OFFERS</span></div>
         <div class="event">
             <div class="event_container job">
