--- a/Front-end/src/app/post/create-post/create-post.component.html
+++ b/Front-end/src/app/post/create-post/create-post.component.html
@@ -13,7 +13,7 @@
         </div>
         <div class="buttons">
             <input #file type="file" id="file" (change)="onFileChanged($event)"  (change)="preview(file.files)" >
-            <label for="file"><i class="far fa-file-image"></i> Photo</label>
+            <label for="file"><i class="fas fa-camera"></i> Image</label>
             <button class="form_new_post" type="submit">Post</button>
         </div>
     </form>
