--- a/Front-end/src/app/post/view-posts/view-posts.component.css
+++ b/Front-end/src/app/post/view-posts/view-posts.component.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     background-color: whitesmoke;
     padding: 16px;
-    border-bottom:1px solid black;
+    margin-bottom: 10px;
 }
 
 .user_post_header{
@@ -42,10 +42,15 @@
 }
 .reactions{
     display: flex;
+    justify-content: space-between;
+    width: 170px;
 }
 .likes{
     color: rgb(71, 97, 170);
     margin-right: 10px;
+    display: flex;
+    width: 31%;
+    justify-content: space-between;
 }
 .comments{
     color: rgb(71, 97, 170);
@@ -67,6 +72,11 @@
 
 .username{
     cursor: pointer;
+}
+
+.username>a{
+    color: black;
+    text-decoration: none;
 }
 
 
